# deepagents-project

./: .env  .gitignore  README.md  pyproject.toml
chroma_store/: chroma.sqlite3
src/: api.py  main.py
src/data/: doc_generator.py  index_doc_generator.py  index_pipeline.py  query.py  query_index.py  tabular_pipeline.py
src/llm/: llm.py  llm_tool_index.py
src/models/: icd10_result.py  interrupt_decision.py
src/routers/: agent_routers.py
src/tools/: icd10_index_search.py  icd10_search.py  internet_search.py  weather.py
src/utils/: load_chromadb.py
tests/: evaluate_icd10_model.py
